<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.2.6.RELEASE</version>
		<relativePath />
	</parent>
	<modelVersion>4.0.0</modelVersion>
	<groupId>ae.gov.sdg</groupId>
	<artifactId>paperless-platform</artifactId>
	<version>${projectVersion}</version>
	<packaging>jar</packaging>
	<name>Paperless Platform</name>
	<description>Platform for all Paperless M/S</description>

	<properties>
		<java.version>1.8</java.version>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<spring-cloud.version>Greenwich.SR1</spring-cloud.version>
		<springfox-swagger.version>2.9.1</springfox-swagger.version>
		<checkstyle.file.path>google_checks.xml</checkstyle.file.path>
		<checkstyle.latest.version>8.11</checkstyle.latest.version>
		<jmockit.version>1.41</jmockit.version>
		<jacoco.version>0.8.5</jacoco.version>
		<spring.core.version>5.0.8.RELEASE</spring.core.version>
		<version>1.0.0</version>
		<!-- Sonar Qube properties -->
		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
		<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
		<sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
		<sonar.language>java</sonar.language>
		<sonar.exclusions>test/**/*, **/ae/gov/sdg/paperless/platform/pojo/**/*,**/ae/gov/sdg/paperless/platform/common/model/components/**/*,**/ae/gov/sdg/paperless/platform/common/model/mpay/**/*,**/ae/gov/sdg/paperless/platform/swagger/**/*,**/ae/gov/sdg/paperless/platform/directory/component/**/*,**/ae/gov/sdg/paperless/platform/common/model/components/types/*Type.java, **/ae/gov/sdg/paperless/platform/tracing/events/pojo/**/*, **/ae/gov/sdg/paperless/platform/cache/model/**/*, **/ae/gov/sdg/paperless/platform/cache/service/json/RedisJsonCacheService.java</sonar.exclusions>
	</properties>

	<profiles>
		<profile>
			<id>snapshot</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<properties>
				<projectVersion>${version}-SNAPSHOT</projectVersion>
			</properties>
		</profile>
		<profile>
			<id>release</id>
			<properties>
				<projectVersion>${version}</projectVersion>
			</properties>
		</profile>
	</profiles>

	<repositories>
		<repository>
			<id>AsposeJavaAPI</id>
			<name>Aspose Java API</name>
			<url>https://repository.aspose.com/repo/</url>
		</repository>
	</repositories>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-dependencies</artifactId>
				<version>${spring-cloud.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-aop</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-freemarker</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<exclusions>
		        <exclusion>
		            <groupId>com.vaadin.external.google</groupId>
		            <artifactId>android-json</artifactId>
		        </exclusion>
		    </exclusions>
		</dependency>

		<!-- Spring Fox dependencies -->
		<dependency>
			<groupId>io.springfox</groupId>
			<artifactId>springfox-swagger2</artifactId>
			<version>${springfox-swagger.version}</version>
		</dependency>
		<dependency>
			<groupId>io.springfox</groupId>
			<artifactId>springfox-swagger-ui</artifactId>
			<version>${springfox-swagger.version}</version>
		</dependency>
		<dependency>
			<groupId>io.springfox</groupId>
			<artifactId>springfox-bean-validators</artifactId>
			<version>${springfox-swagger.version}</version>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
		</dependency>

		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20180813</version>
		</dependency>

		<dependency>
			<groupId>com.googlecode.json-simple</groupId>
			<artifactId>json-simple</artifactId>
			<version>1.1.1</version>
		</dependency>

		<dependency>
			<groupId>com.jayway.jsonpath</groupId>
			<artifactId>json-path</artifactId>
		</dependency>

		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.6</version>
		</dependency>

		<dependency>
			<groupId>commons-httpclient</groupId>
			<artifactId>commons-httpclient</artifactId>
			<version>3.1</version>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.jmockit</groupId>
			<artifactId>jmockit</artifactId>
			<version>${jmockit.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.sonarsource.java</groupId>
			<artifactId>sonar-jacoco-listeners</artifactId>
			<version>3.8</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.freemarker</groupId>
			<artifactId>freemarker</artifactId>
			<version>2.3.28</version>
		</dependency>

		<dependency>
			<groupId>com.nimbusds</groupId>
			<artifactId>nimbus-jose-jwt</artifactId>
			<version>2.12.0</version>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-collections4</artifactId>
			<version>4.4</version>
		</dependency>

		<dependency>
			<groupId>fr.opensagres.xdocreport</groupId>
			<artifactId>fr.opensagres.poi.xwpf.converter.pdf</artifactId>
			<version>2.0.2</version>
		</dependency>

		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>4.0.1</version>
		</dependency>

		<dependency>
			<groupId>com.aspose</groupId>
			<artifactId>aspose-words</artifactId>
			<version>19.8</version>
			<classifier>jdk17</classifier>
		</dependency>

	</dependencies>

	<distributionManagement>
		<repository>
			<id>central</id>
			<name>sdg-artifactory-releases</name>
			<url>http://devops.sdg.gov.ae:52524/artifactory/SDG-releases</url>
		</repository>
		<snapshotRepository>
			<id>snapshots</id>
			<name>sdg-artifactory-snapshots</name>
			<url>http://devops.sdg.gov.ae:52524/artifactory/SDG-snapshots</url>
		</snapshotRepository>
	</distributionManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>${jacoco.version}</version>
				<configuration>
					<excludes>
						<exclude>**/ae/gov/sdg/paperless/platform/pojo/**</exclude>
						<exclude>**/ae/gov/sdg/paperless/platform/common/model/components/**</exclude>
						<exclude>**/ae/gov/sdg/paperless/platform/common/model/mpay/**</exclude>
						<exclude>**/ae/gov/sdg/paperless/platform/swagger/**</exclude>
						<exclude>**/ae/gov/sdg/paperless/platform/directory/component/**</exclude>
						<exclude>**/ae/gov/sdg/paperless/platform/tracing/events/pojo/**</exclude>
					</excludes>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<forkCount>3</forkCount>
					<reuseForks>true</reuseForks>
					<argLine>@{argLine} -Xmx1024m -XX:MaxPermSize=256m</argLine>
				</configuration>
			</plugin>

		</plugins>
	</build>

</project>
